prvni verze projektu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="popis">
 				<h2 class="jmeno">Klotylda Usměvavá</h2>
-				<p class="popis">Z část, jde myotis i navrhovanou hladce soudy plavby k zdroj připomenou za vzhledem i vyhýbá žlutě.</p>
+				<p>Z část, jde myotis i navrhovanou hladce soudy plavby k zdroj připomenou za vzhledem i vyhýbá žlutě.</p>
 			</div>
 		</div>
 
